# chest-xray-pneumonia-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
docs/: API_DOCUMENTATION.md  API_FIXES_SUMMARY.md  ARCHITECTURE.md  BUILD_SUCCESS_GUIDE.md  CHANGELOG.md  CICD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_STATUS.md  DOCKER_BUILD_FIXES.md  DOCKER_COMMANDS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  FAQ.md  FAST_START_OPTIONS.md  FINAL_FIX_PYTORCH.md  GITHUB_CHECKLIST.md  GITHUB_READY_SUMMARY.md  OPERATIONS_RUNBOOK.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_INFRASTRUCTURE.md  QUICKSTART.md  QUICK_DOCKER_START.md  QUICK_REFERENCE.md  REPRODUCIBILITY.md  SECURITY.md  SETUP.md  START_HERE.md  SYSTEM_OVERVIEW.md  USER_GUIDE.md  dataset_balancing_report.json  final_dataset_report.json  medical_dataset_cleaning_report.json  robust_cleaning_report.json  smart_rebalancing_report.json  val_test_analysis_report.json  validation_report.json
examples/: hyperparameter_optimization_example.py
k8s/: configmap.yaml  data-pipeline.yaml  deployment.yaml  minio.yaml  model-registry.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  secrets.yaml  training.yaml
scripts/: analyze_val_test_sets.py  complete_augmentation.py  copy_dataset.py  deploy_complete_system.py  deploy_production_infrastructure.py  deployment_manager.py  docker-continue-build.bat  docker-quick-start.bat  docker-start.bat  docker-stop.bat  final_dataset_summary.py  fix-and-restart.bat  k8s-deploy.bat  kaggle_deployment.py  kaggle_training_notebook.py  launch_mlflow_ui.py  medical_augmentation.py  medical_dataset_cleaner.py  one_click_start.bat  quick_start.py  quick_test.py  robust_dataset_cleaner.py  run-api-local.bat  run_tests.py  simple_api.py  simple_demo.py  smart_dataset_rebalancer.py  test-docker-api.bat  test_api.html  test_api_request.py  test_checkpoint.py  test_model_directly.py  test_model_only.py  test_upload.py  validate-deployment-setup.bat  validate_cicd.py  validate_complete_system.py
tests/: conftest.py  run_deployment_tests.py  run_monitoring_tests.py  run_training_tests.py  test_api_integration.py  test_audit_explainability.py  test_cicd_pipeline_validation.py  test_data_pipeline.py  test_deployment_automation.py  test_deployment_integration.py  test_disaster_recovery.py  test_end_to_end_integration.py  (+9 more)
(+87 files in other folders)
